--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -22,3 +22,5 @@
 
 @import "~datatables.net-bs/css/dataTables.bootstrap.css";
 @import "~layui-src/dist/css/layui.css";
+@import "~bootstrap-table/dist/bootstrap-table.min.css"
+
